--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,11 @@ flask_sqlalchemy
 stix2
 gitpython
 requests
+stix2-patterns
+pyyaml==3.13
+simple_settings==0.13
+alignment==1.0.10
+numpy
+pebble==4.3.10
+click==7.0
+./patternson_runner/obspat/stix2-pattern-matcher
