--- a/.github/workflows/page.yml
+++ b/.github/workflows/page.yml
@@ -18,3 +18,8 @@ jobs:
           python --version
           pip install jinja2
           python compile-docs.py
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@4.0.0
+        with:
+          branch: gh-pages # The branch the action should deploy to.
+          folder: .github/out # The folder the action should deploy.
