remove stix remnants

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,12 @@
-flask_restful
-flask_sqlalchemy
-stix2
-gitpython
-requests
-stix2-patterns
+flask_restful==0.3.8
+flask_sqlalchemy==2.5.1
+gitpython==3.1.14
+requests==2.25.1
 pyyaml==5.4
 simple_settings==0.13
 alignment==1.0.10
-numpy
+numpy==1.20.2
 pebble==4.3.10
-click==7.0
-requests_toolbelt
-Jinja2
+click==7.1.2
+requests_toolbelt==0.9.1
+Jinja2==2.11.3
